# rust_pico2w_blink

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
.github/workflows/: build_blinky.yml
