[package]
name = "pico2w-pure-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rp235x-hal = { version = "0.3.0" }
rp-pac = { version = "7.0.0", features = ["rp235x"] }
cortex-m = "0.7"          # CPU intrinsics, asm
cortex-m-rt = "0.7"       # #[entry] attribute
panic-halt = "0.2"        # panic handler
pio-proc = "0.3"          # pio_proc macros
cyw43     = { git = "https://github.com/embassy-rs/embassy.git", rev = "286d887529c66d8d1b4c7b56849e7a95386d79db", features = ["defmt", "firmware-logs"] } # version = "0.5.0"
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "286d887529c66d8d1b4c7b56849e7a95386d79db", package = "cyw43-pio", features = ["defmt"] } # version = "0.8.0"

# Optional: defmt for logging (works with CYW43 firmware logging)
# defmt = "1.0"
# defmt-rtt = "1.0"

[build]
target = "thumbv8m.main-none-eabihf"

[profile.release]
debug = true
