[package]
name = "pico2w-pure-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# RP2350 HAL
rp235x-hal = { version = "0.3", features = ["cyw43"] }

# CYW43 firmware helper
cyw43 = "0.5.0" 

# Cortex-M runtime + panic handler
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"

# Optional logging for debug
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# PIO assembler
pio-proc = "0.3.0"
pio = "0.3.0"

# Utilities
static_cell = "2.1"
